--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "stylelint": "stylelint './src/**/*.js' --cache --cache-location './.stylelintcache'; exit 0",
-    "stylelint:watch": "nodemon --watch src -x \"npm run stylelint\"",
+    "stylelint:watch": "nodemon --quiet --watch src -x \"npm run stylelint\"",
     "app": "webpack-dev-server --env.development --config webpack.base.js",
     "dev": "npm-run-all -p app stylelint:watch",
     "build": "webpack --env.production --config webpack.base.js && npm run purgecss:postbuild",
@@ -14,12 +14,10 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components-px2rem": "^1.5.5",
     "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.2",
     "css-loader": "^4.2.0",
     "cssnano": "^4.1.10",
     "directory-named-webpack-plugin": "^4.0.1",
@@ -33,7 +31,6 @@
     "eslint-plugin-react": "^7.20.5",
     "fast-sass-loader": "^1.5.0",
     "file-loader": "^6.0.0",
-    "glob-all": "^3.2.1",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
     "node-sass": "^4.14.1",
@@ -43,12 +40,8 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "postcss-scss": "^2.1.1",
     "prettier": "^2.0.5",
-    "purge-from-html": "^1.0.3",
-    "purgecss-from-html": "^2.2.0",
-    "purgecss-from-js": "^1.0.0",
-    "purgecss-webpack-plugin": "^2.3.0",
+    "purgecss": "^2.3.0",
     "style-loader": "^1.2.1",
     "stylelint": "^13.6.1",
     "stylelint-config-recommended": "^3.0.0",
@@ -65,21 +58,22 @@
     "webpack-merge": "^5.1.0"
   },
   "dependencies": {
-    "@bootstrap-styled/provider": "^2.0.2",
-    "@bootstrap-styled/v4": "^3.4.0",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.2",
+    "bootstrap-scss": "^4.5.2",
+    "immer": "^7.0.7",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-slider": "^3.0.0",
+    "react-bootstrap-typeahead": "^5.1.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.4.0",
     "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1",
-    "styled-normalize": "^8.0.7"
+    "styled-components": "^5.1.1"
   },
   "engines": {
     "node": ">= 12.0.0",
