filtering, price range inputs logic
also:
* change star rating component for ability to get state
* a bit change file structure

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     // vscode path completion fix
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
     }
   },
 }
