--- a/package.json
+++ b/package.json
@@ -67,13 +67,15 @@
     "react-bootstrap-typeahead": "^5.1.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.4.0",
-    "react-rating": "^2.0.5",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "use-deep-compare-effect": "^1.4.0",
+    "use-immer": "^0.4.1"
   },
   "engines": {
     "node": ">= 12.0.0",
