--- a/package.json
+++ b/package.json
@@ -60,8 +60,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap-scss": "^4.5.2",
+    "classnames": "^2.2.6",
     "immer": "^7.0.7",
     "react": "^16.13.1",
+    "react-avatar": "^3.9.7",
+    "react-avatar-edit": "^0.8.3",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-slider": "^3.0.0",
     "react-bootstrap-typeahead": "^5.1.1",
