--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint:fix && git add ."
+      "pre-commit": "npm run lint:fix"
     }
   }
 }
